# rust-mongo

./: .env  ARCHITECTURE.md  Cargo.toml  DTO_GUIDE.md  FLOW_EXAMPLES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  PAGINATION_GUIDE.md  PAGINATION_IMPLEMENTATION.md  README.md  README_REFACTORING.md  REFACTORING_SUMMARY.md  VISUAL_DIAGRAMS.md  check.txt  check_error.txt  check_error_2.txt  check_error_3.txt  check_error_4.txt  check_error_5.txt  check_error_regions.txt  check_error_regions_2.txt  check_final_results.txt  check_final_results_utf8.txt  check_interpretations.txt  check_output.txt  check_region_removal.txt  check_region_removal_utf8.txt  check_short.txt  check_warnings_final.txt  check_warnings_final_utf8.txt  error.txt  logs.txt  test_api_verify.txt  test_api_verify_utf8.txt  test_file_upload.ps1  test_output.txt  test_output_utf8.txt  verify_endpoints.ps1  verify_register_public.ps1  verify_users_crud.ps1
src/: db.rs  docs.rs  dto.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  pagination.rs  response.rs  routes.rs  s3.rs  tests.rs  validation.rs
src/dto/: appointment.rs  auth.rs  child_code.rs  code.rs  common.rs  doctor.rs  file.rs  insurance.rs  interpretation.rs  kit.rs  medical_record.rs  medicine.rs  mod.rs  nurse.rs  observation.rs  region.rs  role.rs  service.rs  user.rs  user_role.rs
src/handlers/: appointment_handlers.rs  auth_handlers.rs  child_code_handlers.rs  code_handlers.rs  doctor_handlers.rs  file_handlers.rs  insurance_handlers.rs  kit_handlers.rs  (+11 more)
static/: openapi.json  swagger.html
tests/: api_tests.rs
(+37 files in other folders)
