[package]
name = "rme-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
mongodb = "2.8.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
time = "=0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing-subscriber = "0.3.18"
url = "=2.4.1"
